Partage de la liste possible pour le propriétaire

--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -35,6 +35,7 @@
 </div>
 
 <script type="text/javascript" src="{{ base_path }}/public/js/jquery.min.js"></script>
+<script type="text/javascript" src="{{ base_path }}/public/js/popper.min.js"></script>
 <script type="text/javascript" src="{{ base_path }}/public/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{ base_path }}/public/js/all.min.js"></script>
 {% block scripts %}{% endblock %}
