Ajout du popover quand on copie le lien

--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -38,6 +38,11 @@
 <script type="text/javascript" src="{{ base_path }}/public/js/popper.min.js"></script>
 <script type="text/javascript" src="{{ base_path }}/public/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{ base_path }}/public/js/all.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('[data-toggle="popover"]').popover();
+    });
+</script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
