--- a/app/Views/pages/createListe.twig
+++ b/app/Views/pages/createListe.twig
@@ -14,7 +14,7 @@
             </div>
             <div class="form-group">
                 <label for="expiration">Expiration</label>
-                <input type="date" id="expiration" name="expiration" value="" required>
+                <input class="form-control" type="date" id="expiration" name="expiration" value="" required>
             </div>
             <button type="Submit" class="btn btn-dark">Créer</button>
         </form>
