--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -60,7 +60,8 @@
                                     <div class="modal-body">
                                         <div class="form-group">
                                             <label for="inputName">Nom*</label>
-                                            <input type="text" name="name" class="form-control" id="inputName" placeholder="Votre nom" value="{{ name }}" required>
+                                            <input type="text" name="name" class="form-control" id="inputName"
+                                                   placeholder="Votre nom" value="{{ name }}" required>
                                         </div>
                                         <div class="form-group">
                                             <label for="textarea">Ajoutez un message à votre réservation</label>
