--- a/app/Views/pages/listeAdmin.twig
+++ b/app/Views/pages/listeAdmin.twig
@@ -91,7 +91,7 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer
                                 </button>
-                                <button type="submit" class="btn btn-dark">Réserver</button>
+                                <button type="submit" class="btn btn-dark">Modifier</button>
                             </div>
                         </form>
                     </div>
