--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -10,12 +10,14 @@
 {% block content %}
     <section class="jumbotron text-center mt-4">
         <div class="container">
-            <i class="fas fa-share-alt" id="copie" onclick="copy()"></i>
             <h1 class="jumbotron-heading">{{ liste.titre }}</h1>
             <p class="lead text-muted">{{ liste.description }}</p>
             <p class="lead text-muted">{{ liste.expiration|date("d/m/Y") }}</p>
             {% if creator == true %}
                 <a href="" class="btn btn-outline-dark float-right">Administrer</a>
+                <button class="btn btn-outline-dark share-btn float-left" data-toggle="popover"
+                        data-content="Lien copié!" data-placement="bottom" data-trigger="focus">Partager l'objet
+                </button>
             {% endif %}
         </div>
     </section>
@@ -85,4 +87,39 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript">
+        function fallbackCopyTextToClipboard(text) {
+            var textArea = document.createElement("textarea");
+            textArea.value = text;
+            textArea.style.position = "fixed";  //avoid scrolling to bottom
+            document.body.appendChild(textArea);
+            textArea.focus();
+            textArea.select();
+
+            try {
+                document.execCommand('copy');
+            } catch (err) {
+                console.error('Fallback: Oops, unable to copy', err);
+            }
+
+            document.body.removeChild(textArea);
+        }
+
+        function copyTextToClipboard(text) {
+            if (!navigator.clipboard) {
+                fallbackCopyTextToClipboard(text);
+                return;
+            }
+            navigator.clipboard.writeText(text);
+        }
+
+        var shareBtn = document.querySelector('.share-btn');
+
+        shareBtn.addEventListener('click', function (event) {
+            copyTextToClipboard(location.href);
+        });
+    </script>
 {% endblock %}
